--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,16 @@
   "license": "Apache-2.0",
   "description": "",
   "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "hardhat": "^2.22.17",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.2"
+    "mongoose": "^8.9.2",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
